src/components/Home/Logo/logo.scss
// .logo-container{
//     z-index: 0;
//     width: 400px;
//     height: 609px;
   
//     opacity: 1;

//     img{        
            
        
        
//     }
// svg{
//     width: 100%;
//     bottom: 0;
//     height: 100%;

// }
//     .solid-logo{
//         position: absolute;
//         top:auto;
//         right:auto;
//         bottom: -127px;
//         left: -8px;
//         margin:auto;
//         width:100%;
//         opacity:0;
//         z-index: 1;
     
//     }
//     .solid-logo2{
//         position: absolute;
//         top:auto;
//         right:auto;
//         bottom: -150px;
//         left: -60px;
//         margin:auto;
//         width:103%;
//         height: 750px;
//         opacity:0;
//         z-index: -1;
     
//     }
//     .svg-container{
//         stroke:rgb(118, 225, 10);
//         stroke-width: 10px  ;
       
//     }
// }
// .solid-logo{
   
//       opacity:0;
//             z-index: 1;
         
//      }

// .svg-container{
//     stroke-width:10px;
//     stroke:#0CB6B3;

// }

//  .logo-container{
//     opacity: 0;
//  }
#svg-path {
    stroke-width: 10;
    stroke-dashoffset: 10;
    animation: dash 5s linear alternate ;
  
}

.path {
    stroke-dasharray: 1000;
    stroke-dashoffset: 1000;
    animation: dash 5s linear alternate infinite;
   
}

@keyframes dash {
    from {
        stroke-dashoffset: 10;
    }

    to {
        stroke-dashoffset: 882;
        stroke:#0CB6B3;;
    }
}

